# tinkoff-contest

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg
test_contest/A/: README.md  expected.json  solution.py  test_solution.py
test_contest/B/: README.md  expected.json  solution.py  test_solution.py
test_contest/C/: README.md  expected.json  solution.py  test_solution.py
test_contest/D/: README.md  expected.json  solution.py  test_solution.py
test_contest/E/: README.md  expected.json  solution.py  test_solution.py
test_contest/F/: README.md  expected.json  solution.py  test_solution.py
test_contest/G/: README.md  expected.json  solution.py  test_solution.py
test_contest/H/: README.md  expected.json  solution.py  test_solution.py
