[tool.poetry]
name = "tinkoff_contest"
version = "0.1.0"
description = ""
authors = ["Dmitry Samoylenko <dimsamoylenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.14.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
GitPython = "^3.1.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
